// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > Snapshots > renders spinner when loading 1`] = `
<div>
  <button
    class="_button_02ec15 _button--primary-filled_02ec15 _button--md_02ec15 _button--loading_02ec15"
  >
    <div
      class="_spinner_c80566 _spinner--default_c80566 _spinner--md_c80566 _button__spinner_02ec15"
    >
      <svg
        class="_spinner__svg_c80566"
        fill="currentColor"
        height="20"
        viewBox="0 0 48 48"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="24"
          cy="4"
          r="4"
        />
        <circle
          cx="12.19"
          cy="7.86"
          r="3.7"
        />
        <circle
          cx="5.02"
          cy="17.68"
          r="3.4"
        />
        <circle
          cx="5.02"
          cy="30.32"
          r="3.1"
        />
        <circle
          cx="12.19"
          cy="40.14"
          r="2.8"
        />
        <circle
          cx="24"
          cy="44"
          r="2.5"
        />
        <circle
          cx="35.81"
          cy="40.14"
          r="2.2"
        />
        <circle
          cx="42.98"
          cy="30.32"
          r="1.9"
        />
        <circle
          cx="42.98"
          cy="17.68"
          r="1.6"
        />
        <circle
          cx="35.81"
          cy="7.86"
          r="1.3"
        />
      </svg>
    </div>
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should applies disabled classes 1`] = `
<div>
  <button
    aria-disabled="true"
    class="_button_02ec15 _button--primary-filled_02ec15 _button--md_02ec15 _button--disabled_02ec15"
    disabled=""
  >
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should applies fullWidth classes 1`] = `
<div>
  <button
    class="_button_02ec15 _button--primary-filled_02ec15 _button--md_02ec15 _button--full-width_02ec15"
  >
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should applies icon-only classes 1`] = `
<div>
  <button
    class="_button_02ec15 _button--primary-filled_02ec15 _button--md_02ec15 _button--icon-only_02ec15"
  >
    <span
      class="_button__left_02ec15"
    >
      <i
        class="fas fa-star"
      />
    </span>
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
    <span
      class="_button__right_02ec15"
    >
      <i
        class="fas fa-star"
      />
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should applies pressed classes 1`] = `
<div>
  <button
    aria-pressed="true"
    class="_button_02ec15 _button--primary-filled_02ec15 _button--md_02ec15 _button--pressed_02ec15"
  >
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should apply 'critical' skin classes 1`] = `
<div>
  <button
    class="_button_02ec15 _button--critical-filled_02ec15 _button--md_02ec15"
  >
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should apply 'filled' appearance classes 1`] = `
<div>
  <button
    class="_button_02ec15 _button--primary-filled_02ec15 _button--md_02ec15"
  >
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should apply 'ghost' appearance classes 1`] = `
<div>
  <button
    class="_button_02ec15 _button--primary-ghost_02ec15 _button--md_02ec15"
  >
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should apply 'lg' size classes 1`] = `
<div>
  <button
    class="_button_02ec15 _button--primary-filled_02ec15 _button--lg_02ec15"
  >
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should apply 'md' size classes 1`] = `
<div>
  <button
    class="_button_02ec15 _button--primary-filled_02ec15 _button--md_02ec15"
  >
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should apply 'neutral' skin classes 1`] = `
<div>
  <button
    class="_button_02ec15 _button--neutral-filled_02ec15 _button--md_02ec15"
  >
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should apply 'outline' appearance classes 1`] = `
<div>
  <button
    class="_button_02ec15 _button--primary-outline_02ec15 _button--md_02ec15"
  >
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should apply 'primary' skin classes 1`] = `
<div>
  <button
    class="_button_02ec15 _button--primary-filled_02ec15 _button--md_02ec15"
  >
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should apply 'secondary' skin classes 1`] = `
<div>
  <button
    class="_button_02ec15 _button--secondary-filled_02ec15 _button--md_02ec15"
  >
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should apply 'sm' size classes 1`] = `
<div>
  <button
    class="_button_02ec15 _button--primary-filled_02ec15 _button--sm_02ec15"
  >
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should apply 'soft' appearance classes 1`] = `
<div>
  <button
    class="_button_02ec15 _button--primary-soft_02ec15 _button--md_02ec15"
  >
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should apply 'success' skin classes 1`] = `
<div>
  <button
    class="_button_02ec15 _button--success-filled_02ec15 _button--md_02ec15"
  >
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should apply 'xl' size classes 1`] = `
<div>
  <button
    class="_button_02ec15 _button--primary-filled_02ec15 _button--xl_02ec15"
  >
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should apply 'xs' size classes 1`] = `
<div>
  <button
    class="_button_02ec15 _button--primary-filled_02ec15 _button--xs_02ec15"
  >
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should render additional classes 1`] = `
<div>
  <button
    class="_button_02ec15 _button--primary-filled_02ec15 _button--md_02ec15 other-class"
  >
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should render left slot content 1`] = `
<div>
  <button
    class="_button_02ec15 _button--primary-filled_02ec15 _button--md_02ec15"
  >
    <span
      class="_button__left_02ec15"
    >
      Left slot
    </span>
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should render right slot content 1`] = `
<div>
  <button
    class="_button_02ec15 _button--primary-filled_02ec15 _button--md_02ec15"
  >
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
    <span
      class="_button__right_02ec15"
    >
      Right slot
    </span>
  </button>
</div>
`;

exports[`Button > Snapshots > should renders component as anchor 1`] = `
<div>
  <a
    class="_button_02ec15 _button--primary-filled_02ec15 _button--md_02ec15"
    href="#"
  >
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </a>
</div>
`;

exports[`Button > Snapshots > should renders default component 1`] = `
<div>
  <button
    class="_button_02ec15 _button--primary-filled_02ec15 _button--md_02ec15"
  >
    <span
      class="_button__text_02ec15"
    >
      Button
    </span>
  </button>
</div>
`;
